Bug 1297342, reserved attribute should be on key element not on the command, r=felipe